[feat] custom pages

--- a/_data/blog/10-09-2020-ultimo.md
+++ b/_data/blog/10-09-2020-ultimo.md
@@ -1,10 +1,12 @@
 ---
 template: BlogPost
 date: 2020-09-04T20:59:06.151Z
-title: noticia teste 5
-fonte: asdasdasa
+title: ultimo
+fonte: ultimo
 ---
-teste
+ultimo
+ultimo
+ultimo
 
 
 
